<resources>
    <string name="app_name">Assignment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="leg">leg</string>
    <string name="rooms">rooms</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="search">SEARCH</string>
    <string name="messages">MESSAGES</string>
    <string name="bookings">BOOKINGS</string>
    <string name="user">YOU</string>
    <string name="or">OR</string>
    <string name="no_messages_yet">NO MESSAGES YET</string>
    <string name="no_bookings_yet">NO BOOKINGS YET</string>
    <string name="profile">PROFILE</string>
    <string name="fbicon">FBICON</string>
</resources>
