<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/style_login_bg"
    android:fitsSystemWindows="true"
    tools:context="com.smartbeings.assignment.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tetxlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="17sp"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="135dp"
            android:layout_height="120dp"
            android:background="@drawable/logo"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leg"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rooms"
                android:textSize="32sp"
                android:textColor="#fff" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/username_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/userico"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:hint="@string/username"
            android:textColor="#fff"
            android:inputType="textPersonName"
            android:background="@drawable/style_loginedittext"
            android:textColorHint="#fff"/>

        <EditText
            android:id="@+id/password_etxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textColor="#fff"
            android:background="@drawable/style_loginedittext"
            android:drawableStart="@drawable/lockico"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#fff" />

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/sign_in"
                android:background="@drawable/style_button_login"
                android:textColor="#fff"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">


        <ProgressBar
            android:id="@+id/progbar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center_horizontal"
            android:textColor="#fff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#fff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:padding="10dp"
                android:text="@string/or"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#fff"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0a70dc">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/login19"
                android:contentDescription="@string/fbicon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_with_facebook"
                android:textColor="#fff"
                android:layout_centerInParent="true"
                android:textAlignment="center"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
